[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sliceline"
version = "0.2.20"
description = "✂️ Fast slice finding for Machine Learning model debugging."
authors = ["Antoine de Daran"]
readme = "README.rst"
license = "BSD-3-Clause"
repository = "https://github.com/DataDome/sliceline"
documentation = "https://sliceline.readthedocs.io/en/stable/"

[tool.poetry.dependencies]
python = ">=3.10, <4"
numpy = "^1.25"
scikit-learn = "^1.6.0"
scipy = "^1.12"
numba = "^0.61.0"

[tool.poetry.group.dev.dependencies]
black = "^24"
isort = "^6.0.1"
flake8 = "^6"
jupyter = "^1.0.0"
matplotlib = "^3.9"
nbconvert = "^7.0.0"
optbinning = "^0.15.0"
pandas = "^2.1.1"
pytest = "^7.2.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^3.0.0"
Sphinx = "^8.0.0"
sphinx-rtd-theme = "^3.0.0"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*", "*/validation.py"]

[tool.coverage.report]
fail_under = 80
