[project]
name = "sliceline"
version = "0.2.20"
description = "Fast slice finding for Machine Learning model debugging."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    { name = "Antoine de Daran" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "numpy>=1.25,<3",
    "scikit-learn>=1.6.0,<2",
    "scipy>=1.12,<2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/DataDome/sliceline"
Documentation = "https://sliceline.readthedocs.io/en/stable/"
Repository = "https://github.com/DataDome/sliceline"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9",
    "nbconvert>=7.0.0",
    "optbinning>=0.15.0",
    "pandas>=2.1.1",
    "pytest>=7.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.9.0",
    "Sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sliceline"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sliceline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*", "*/validation.py"]

[tool.coverage.report]
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
